add_subdirectory(aggregate)
add_subdirectory(scalar)
set(EXTENSION_SOURCES
        ${EXTENSION_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/cast.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_drivers.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_read.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_read_meta.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_read_raster.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_read_raster_meta.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_write.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/st_write_raster.cpp
        PARENT_SCOPE
        )